Use an ArrowBuf for the window